@@ -2,14 +2,7 @@
 package io.quarkus.kubernetes.deployment;
 
 import static io.dekorate.kubernetes.decorator.AddServiceResourceDecorator.distinct;
-import static io.quarkus.kubernetes.deployment.Constants.DEFAULT_HTTP_PORT;
-import static io.quarkus.kubernetes.deployment.Constants.HTTP_PORT;
-import static io.quarkus.kubernetes.deployment.Constants.KNATIVE;
-import static io.quarkus.kubernetes.deployment.Constants.QUARKUS_ANNOTATIONS_BUILD_TIMESTAMP;
-import static io.quarkus.kubernetes.deployment.Constants.QUARKUS_ANNOTATIONS_COMMIT_ID;
-import static io.quarkus.kubernetes.deployment.Constants.QUARKUS_ANNOTATIONS_QUARKUS_VERSION;
-import static io.quarkus.kubernetes.deployment.Constants.QUARKUS_ANNOTATIONS_VCS_URL;
-import static io.quarkus.kubernetes.deployment.Constants.SERVICE_ACCOUNT;
+import static io.quarkus.kubernetes.deployment.Constants.*;
 
 import java.nio.file.Path;
 import java.time.ZoneOffset;
@@ -82,9 +75,9 @@ import io.fabric8.kubernetes.api.model.ContainerBuilder;
 import io.fabric8.kubernetes.api.model.ObjectMeta;
 import io.fabric8.kubernetes.api.model.PodSpecBuilder;
 import io.fabric8.kubernetes.api.model.rbac.PolicyRule;
-import io.fabric8.kubernetes.api.model.rbac.PolicyRuleBuilder;
 import io.quarkus.builder.Version;
 import io.quarkus.container.spi.ContainerImageInfoBuildItem;
+import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.builditem.ApplicationInfoBuildItem;
 import io.quarkus.deployment.metrics.MetricsCapabilityBuildItem;
 import io.quarkus.deployment.pkg.PackageConfig;
@@ -95,6 +88,7 @@ import io.quarkus.kubernetes.spi.DecoratorBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesAnnotationBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesClusterRoleBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesCommandBuildItem;
+import io.quarkus.kubernetes.spi.KubernetesEffectiveServiceAccountBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesHealthLivenessPathBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesHealthReadinessPathBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesHealthStartupPathBuildItem;
@@ -110,7 +104,9 @@ import io.quarkus.kubernetes.spi.KubernetesServiceAccountBuildItem;
 import io.quarkus.kubernetes.spi.Property;
 import io.quarkus.kubernetes.spi.RoleRef;
 import io.quarkus.kubernetes.spi.Subject;
+import io.quarkus.kubernetes.spi.Targetable;
 
+@SuppressWarnings("OptionalUsedAsFieldOrParameterType")
 public class KubernetesCommonHelper {
     private static final Logger LOG = Logger.getLogger(KubernetesCommonHelper.class);
     private static final String ANY = null;
@@ -118,7 +114,6 @@ public class KubernetesCommonHelper {
     private static final String[] PROMETHEUS_ANNOTATION_TARGETS = { "Service",
             "Deployment", "DeploymentConfig" };
     private static final String DEFAULT_ROLE_NAME_VIEW = "view";
-    private static final List<String> LIST_WITH_EMPTY = List.of("");
     private static final String SCHEME_HTTP = "HTTP";
     private static final String SCHEME_HTTPS = "HTTPS";
 
@@ -165,7 +160,7 @@ public class KubernetesCommonHelper {
      */
     public static Optional<Port> getPort(List<KubernetesPortBuildItem> ports, PlatformConfiguration config, String targetPort) {
         return combinePorts(ports, config).values().stream()
-                .filter(distinct(p -> p.getName()))
+                .filter(distinct(Port::getName))
                 .filter(p -> p.getName().equals(targetPort))
                 .findFirst();
     }
@@ -215,7 +210,7 @@ public class KubernetesCommonHelper {
      */
     public static void printMessageAboutPortsThatCantChange(String target, List<KubernetesPortBuildItem> ports,
             PlatformConfiguration configuration) {
-        ports.stream().forEach(port -> {
+        ports.forEach(port -> {
             boolean enabled = port.isEnabled() || configuration.getPorts().containsKey(port.getName());
             if (enabled) {
                 String name = "quarkus." + target + ".ports." + port.getName() + ".container-port";
@@ -223,6 +218,7 @@ public class KubernetesCommonHelper {
                         .map(p -> p.containerPort)
                         .filter(OptionalInt::isPresent)
                         .map(OptionalInt::getAsInt);
+                @SuppressWarnings({ "rawtypes", "unchecked" })
                 Property<Integer> kubernetesPortProperty = new Property(name, Integer.class, value, null, false);
                 PropertyUtil.printMessages(String.format("The container port %s", port.getName()), target,
                         kubernetesPortProperty,
@@ -249,36 +245,34 @@ public class KubernetesCommonHelper {
             Optional<KubernetesHealthStartupPathBuildItem> startupPath,
             List<KubernetesRoleBuildItem> roles,
             List<KubernetesClusterRoleBuildItem> clusterRoles,
-            List<KubernetesServiceAccountBuildItem> serviceAccounts,
+            List<KubernetesEffectiveServiceAccountBuildItem> serviceAccounts,
             List<KubernetesRoleBindingBuildItem> roleBindings) {
         List<DecoratorBuildItem> result = new ArrayList<>();
 
-        result.addAll(createLabelDecorators(project, target, name, config, labels));
+        result.addAll(createLabelDecorators(target, name, config, labels));
         result.addAll(createAnnotationDecorators(project, target, name, config, metricsConfiguration, annotations, port));
-        result.addAll(createPodDecorators(project, target, name, config));
-        result.addAll(createContainerDecorators(project, target, name, namespace, config));
-        result.addAll(createMountAndVolumeDecorators(project, target, name, config));
-        result.addAll(createAppConfigVolumeAndEnvDecorators(project, target, name, config));
+        result.addAll(createPodDecorators(target, name, config));
+        result.addAll(createContainerDecorators(target, name, namespace, config));
+        result.addAll(createMountAndVolumeDecorators(target, name, config));
+        result.addAll(createAppConfigVolumeAndEnvDecorators(target, name, config));
 
-        result.addAll(createCommandDecorator(project, target, name, config, command));
-        result.addAll(createArgsDecorator(project, target, name, config, command));
+        result.addAll(createCommandDecorator(target, name, config, command));
+        result.addAll(createArgsDecorator(target, name, config, command));
 
         // Handle Pull Secrets
         if (config.isGenerateImagePullSecret()) {
-            image.ifPresent(i -> {
-                i.getRegistry().ifPresent(registry -> {
-                    if (i.getUsername().isPresent() && i.getPassword().isPresent()) {
-                        String imagePullSecret = name + "-pull-secret";
-                        result.add(new DecoratorBuildItem(target, new AddImagePullSecretDecorator(name, imagePullSecret)));
-                        result.add(new DecoratorBuildItem(target, new AddDockerConfigJsonSecretDecorator(imagePullSecret,
-                                registry, i.username.get(), i.password.get())));
-                    }
-                });
-            });
+            image.ifPresent(i -> i.getRegistry().ifPresent(registry -> {
+                if (i.getUsername().isPresent() && i.getPassword().isPresent()) {
+                    String imagePullSecret = name + "-pull-secret";
+                    result.add(new DecoratorBuildItem(target, new AddImagePullSecretDecorator(name, imagePullSecret)));
+                    result.add(new DecoratorBuildItem(target, new AddDockerConfigJsonSecretDecorator(imagePullSecret,
+                            registry, i.username.get(), i.password.get())));
+                }
+            }));
         }
 
         // Handle Probes
-        if (!port.isEmpty()) {
+        if (port.isPresent()) {
             result.addAll(createProbeDecorators(name, target, config.getLivenessProbe(), config.getReadinessProbe(),
                     config.getStartupProbe(), livenessProbePath, readinessProbePath, startupPath));
         }
@@ -294,7 +288,7 @@ public class KubernetesCommonHelper {
             Optional<KubernetesClientCapabilityBuildItem> kubernetesClientConfiguration,
             List<KubernetesRoleBuildItem> rolesFromExtensions,
             List<KubernetesClusterRoleBuildItem> clusterRolesFromExtensions,
-            List<KubernetesServiceAccountBuildItem> serviceAccountsFromExtensions,
+            List<KubernetesEffectiveServiceAccountBuildItem> effectiveServiceAccounts,
             List<KubernetesRoleBindingBuildItem> roleBindingsFromExtensions) {
         List<DecoratorBuildItem> result = new ArrayList<>();
         boolean kubernetesClientRequiresRbacGeneration = kubernetesClientConfiguration
@@ -316,24 +310,15 @@ public class KubernetesCommonHelper {
         }
 
         // Add roles from extensions
-        for (KubernetesRoleBuildItem role : rolesFromExtensions) {
-            if (role.getTarget() == null || role.getTarget().equals(target)) {
-                result.add(new DecoratorBuildItem(target, new AddRoleResourceDecorator(name,
+        Targetable.filteredByTarget(rolesFromExtensions, target)
+                .map(role -> new DecoratorBuildItem(target, new AddRoleResourceDecorator(name,
                         role.getName(),
                         role.getNamespace(),
                         Collections.emptyMap(),
-                        role.getRules()
-                                .stream()
-                                .map(it -> new PolicyRuleBuilder()
-                                        .withApiGroups(it.getApiGroups())
-                                        .withNonResourceURLs(it.getNonResourceURLs())
-                                        .withResourceNames(it.getResourceNames())
-                                        .withResources(it.getResources())
-                                        .withVerbs(it.getVerbs())
-                                        .build())
-                                .collect(Collectors.toList()))));
-            }
-        }
+                        role.getRules().stream()
+                                .map(RBACUtil::from)
+                                .toList())))
+                .forEach(result::add);
 
         // Add cluster roles from configuration
         for (Map.Entry<String, ClusterRoleConfig> clusterRoleFromConfig : config.getRbacConfig().clusterRoles.entrySet()) {
@@ -347,56 +332,26 @@ public class KubernetesCommonHelper {
         }
 
         // Add cluster roles from extensions
-        for (KubernetesClusterRoleBuildItem role : clusterRolesFromExtensions) {
-            if (role.getTarget() == null || role.getTarget().equals(target)) {
-                result.add(new DecoratorBuildItem(target, new AddClusterRoleResourceDecorator(name,
+        Targetable.filteredByTarget(clusterRolesFromExtensions, target)
+                .map(role -> new DecoratorBuildItem(target, new AddClusterRoleResourceDecorator(name,
                         role.getName(),
                         Collections.emptyMap(),
-                        role.getRules()
-                                .stream()
-                                .map(it -> new PolicyRuleBuilder()
-                                        .withApiGroups(it.getApiGroups())
-                                        .withNonResourceURLs(it.getNonResourceURLs())
-                                        .withResourceNames(it.getResourceNames())
-                                        .withResources(it.getResources())
-                                        .withVerbs(it.getVerbs())
-                                        .build())
-                                .collect(Collectors.toList()))));
-            }
+                        role.getRules().stream()
+                                .map(RBACUtil::from)
+                                .toList())))
+                .forEach(result::add);
+
+        // Retrieve SA for current target
+        final var potentialSAs = Targetable.filteredByTarget(effectiveServiceAccounts, target).toList();
+        if (potentialSAs.isEmpty()) {
+            throw new RuntimeException("No effective service account found for application " + name);
         }
-
-        Optional<String> effectiveServiceAccount = Optional.empty();
-        String effectiveServiceAccountNamespace = null;
-        for (KubernetesServiceAccountBuildItem sa : serviceAccountsFromExtensions) {
-            String saName = Optional.ofNullable(sa.getName()).orElse(name);
-            result.add(new DecoratorBuildItem(target, new AddServiceAccountResourceDecorator(name, saName,
-                    sa.getNamespace(),
-                    sa.getLabels())));
-
-            if (sa.isUseAsDefault() || effectiveServiceAccount.isEmpty()) {
-                effectiveServiceAccount = Optional.of(saName);
-                effectiveServiceAccountNamespace = sa.getNamespace();
-            }
+        if (potentialSAs.size() > 1) {
+            throw new RuntimeException("More than one effective service account found for application " + name);
         }
-
-        // Add service account from configuration
-        for (Map.Entry<String, ServiceAccountConfig> sa : config.getRbacConfig().serviceAccounts.entrySet()) {
-            String saName = sa.getValue().name.orElse(sa.getKey());
-            result.add(new DecoratorBuildItem(target, new AddServiceAccountResourceDecorator(name, saName,
-                    sa.getValue().namespace.orElse(null),
-                    sa.getValue().labels)));
-
-            if (sa.getValue().isUseAsDefault() || effectiveServiceAccount.isEmpty()) {
-                effectiveServiceAccount = Optional.of(saName);
-                effectiveServiceAccountNamespace = sa.getValue().namespace.orElse(null);
-            }
-        }
-
-        // The user provided service account should always take precedence
-        if (config.getServiceAccount().isPresent()) {
-            effectiveServiceAccount = config.getServiceAccount();
-            effectiveServiceAccountNamespace = null;
-        }
+        final var effectiveServiceAccount = potentialSAs.get(0);
+        final var effectiveServiceAccountNamespace = effectiveServiceAccount.getNamespace();
+        final var effectiveServiceAccountName = effectiveServiceAccount.getServiceAccountName();
 
         // Prepare default configuration
         String defaultRoleName = null;
@@ -412,15 +367,13 @@ public class KubernetesCommonHelper {
         }
 
         // Add role bindings from extensions
-        for (KubernetesRoleBindingBuildItem rb : roleBindingsFromExtensions) {
-            if (rb.getTarget() == null || rb.getTarget().equals(target)) {
-                result.add(new DecoratorBuildItem(target, new AddRoleBindingResourceDecorator(name,
+        Targetable.filteredByTarget(roleBindingsFromExtensions, target)
+                .map(rb -> new DecoratorBuildItem(target, new AddRoleBindingResourceDecorator(name,
                         Strings.isNotNullOrEmpty(rb.getName()) ? rb.getName() : name + "-" + rb.getRoleRef().getName(),
                         rb.getLabels(),
                         rb.getRoleRef(),
-                        rb.getSubjects())));
-            }
-        }
+                        rb.getSubjects())))
+                .forEach(result::add);
 
         // Add role bindings from configuration
         for (Map.Entry<String, RoleBindingConfig> rb : config.getRbacConfig().roleBindings.entrySet()) {
@@ -431,7 +384,7 @@ public class KubernetesCommonHelper {
             if (roleBinding.subjects.isEmpty()) {
                 requiresServiceAccount = true;
                 subjects.add(new Subject(null, SERVICE_ACCOUNT,
-                        effectiveServiceAccount.orElse(name),
+                        effectiveServiceAccountName,
                         effectiveServiceAccountNamespace));
             } else {
                 for (Map.Entry<String, SubjectConfig> s : roleBinding.subjects.entrySet()) {
@@ -493,7 +446,7 @@ public class KubernetesCommonHelper {
                         Collections.emptyMap(),
                         new RoleRef(defaultRoleName, defaultClusterWide),
                         new Subject(null, SERVICE_ACCOUNT,
-                                effectiveServiceAccount.orElse(name),
+                                effectiveServiceAccountName,
                                 effectiveServiceAccountNamespace))));
             } else if (kubernetesClientRequiresRbacGeneration) {
                 // the property `quarkus.kubernetes-client.generate-rbac` is enabled
@@ -504,7 +457,7 @@ public class KubernetesCommonHelper {
                         Collections.emptyMap(),
                         new RoleRef(DEFAULT_ROLE_NAME_VIEW, true),
                         new Subject(null, SERVICE_ACCOUNT,
-                                effectiveServiceAccount.orElse(name),
+                                effectiveServiceAccountName,
                                 effectiveServiceAccountNamespace))));
             }
         }
@@ -513,22 +466,62 @@ public class KubernetesCommonHelper {
         if (requiresServiceAccount) {
             // and generate the resource
             result.add(new DecoratorBuildItem(target,
-                    new AddServiceAccountResourceDecorator(name, effectiveServiceAccount.orElse(name),
+                    new AddServiceAccountResourceDecorator(name, effectiveServiceAccountName,
                             effectiveServiceAccountNamespace,
                             Collections.emptyMap())));
         }
 
         // set service account in deployment resource if the user sets a service account,
         // or it's required for a dependant resource.
-        if (effectiveServiceAccount.isPresent() || requiresServiceAccount) {
-            result.add(new DecoratorBuildItem(target,
-                    new ApplyServiceAccountNameDecorator(name, effectiveServiceAccount.orElse(name))));
+        if (effectiveServiceAccount.wasSet() || requiresServiceAccount) {
+            result.add(new DecoratorBuildItem(target, new ApplyServiceAccountNameDecorator(name, effectiveServiceAccountName)));
         }
 
         return result;
     }
 
-    private static Collection<DecoratorBuildItem> createLabelDecorators(Optional<Project> project, String target, String name,
+    public static KubernetesEffectiveServiceAccountBuildItem computeEffectiveServiceAccount(String name, String target,
+            PlatformConfiguration config, List<KubernetesServiceAccountBuildItem> serviceAccountsFromExtensions,
+            BuildProducer<DecoratorBuildItem> decorators) {
+        Optional<String> effectiveServiceAccount = Optional.empty();
+        String effectiveServiceAccountNamespace = null;
+        for (KubernetesServiceAccountBuildItem sa : serviceAccountsFromExtensions) {
+            String saName = Optional.ofNullable(sa.getName()).orElse(name);
+            decorators.produce(new DecoratorBuildItem(target, new AddServiceAccountResourceDecorator(name, saName,
+                    sa.getNamespace(),
+                    sa.getLabels())));
+
+            if (sa.isUseAsDefault() || effectiveServiceAccount.isEmpty()) {
+                effectiveServiceAccount = Optional.of(saName);
+                effectiveServiceAccountNamespace = sa.getNamespace();
+            }
+        }
+
+        // Add service account from configuration
+        for (Map.Entry<String, ServiceAccountConfig> sa : config.getRbacConfig().serviceAccounts.entrySet()) {
+            String saName = sa.getValue().name.orElse(sa.getKey());
+            decorators.produce(new DecoratorBuildItem(target, new AddServiceAccountResourceDecorator(name, saName,
+                    sa.getValue().namespace.orElse(null),
+                    sa.getValue().labels)));
+
+            if (sa.getValue().isUseAsDefault() || effectiveServiceAccount.isEmpty()) {
+                effectiveServiceAccount = Optional.of(saName);
+                effectiveServiceAccountNamespace = sa.getValue().namespace.orElse(null);
+            }
+        }
+
+        // The user provided service account should always take precedence
+        if (config.getServiceAccount().isPresent()) {
+            effectiveServiceAccount = config.getServiceAccount();
+            effectiveServiceAccountNamespace = null;
+        }
+
+        final var effectiveName = effectiveServiceAccount.orElse(name);
+        return new KubernetesEffectiveServiceAccountBuildItem(effectiveName, effectiveServiceAccountNamespace,
+                effectiveServiceAccount.isPresent(), target);
+    }
+
+    private static Collection<DecoratorBuildItem> createLabelDecorators(String target, String name,
             PlatformConfiguration config, List<KubernetesLabelBuildItem> labels) {
 
         List<DecoratorBuildItem> result = new ArrayList<>();
@@ -536,10 +529,8 @@ public class KubernetesCommonHelper {
         result.add(new DecoratorBuildItem(target, new AddMetadataToTemplateDecorator()));
         result.add(new DecoratorBuildItem(target, new AddSelectorToDeploymentSpecDecorator()));
 
-        labels.forEach(l -> {
-            result.add(new DecoratorBuildItem(l.getTarget(),
-                    new AddLabelDecorator(name, l.getKey(), l.getValue())));
-        });
+        labels.forEach(l -> result.add(new DecoratorBuildItem(l.getTarget(),
+                new AddLabelDecorator(name, l.getKey(), l.getValue()))));
 
         if (!config.isAddVersionToLabelSelectors() || config.isIdempotent()) {
             result.add(new DecoratorBuildItem(target, new RemoveFromSelectorDecorator(name, Labels.VERSION)));
@@ -568,7 +559,7 @@ public class KubernetesCommonHelper {
      * @param config The {@link PlatformConfiguration} instance
      * @param command Optional command item from other extensions
      */
-    private static List<DecoratorBuildItem> createCommandDecorator(Optional<Project> project, String target, String name,
+    private static List<DecoratorBuildItem> createCommandDecorator(String target, String name,
             PlatformConfiguration config, Optional<KubernetesCommandBuildItem> command) {
         List<DecoratorBuildItem> result = new ArrayList<>();
         if (config.getCommand().isPresent()) {
@@ -593,7 +584,7 @@ public class KubernetesCommonHelper {
      * @param config The {@link PlatformConfiguration} instance
      * @param command Optional command item from other extensions
      */
-    private static List<DecoratorBuildItem> createArgsDecorator(Optional<Project> project, String target, String name,
+    private static List<DecoratorBuildItem> createArgsDecorator(String target, String name,
             PlatformConfiguration config, Optional<KubernetesCommandBuildItem> command) {
         List<DecoratorBuildItem> result = new ArrayList<>();
 
@@ -602,13 +593,13 @@ public class KubernetesCommonHelper {
         config.getArguments().ifPresent(args::addAll);
 
         if (!args.isEmpty()) {
-            result.add(new DecoratorBuildItem(target, new ApplyArgsDecorator(name, args.toArray(new String[args.size()]))));
+            result.add(new DecoratorBuildItem(target, new ApplyArgsDecorator(name, args.toArray(new String[0]))));
         }
 
         return result;
     }
 
-    public static List<DecoratorBuildItem> createInitContainerDecorators(String target, String name,
+    public static List<DecoratorBuildItem> createInitContainerDecorators(String target, String applicationName,
             List<KubernetesInitContainerBuildItem> items, List<DecoratorBuildItem> decorators) {
         List<DecoratorBuildItem> result = new ArrayList<>();
 
@@ -617,26 +608,26 @@ public class KubernetesCommonHelper {
                 .map(d -> d.getDecorator(AddEnvVarDecorator.class))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
 
         List<AddMountDecorator> mountDecorators = decorators.stream()
                 .filter(d -> d.getGroup() == null || d.getGroup().equals(target))
                 .map(d -> d.getDecorator(AddMountDecorator.class))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
 
         items.stream().filter(item -> item.getTarget() == null || item.getTarget().equals(target)).forEach(item -> {
             io.dekorate.kubernetes.config.ContainerBuilder containerBuilder = new io.dekorate.kubernetes.config.ContainerBuilder()
                     .withName(item.getName())
                     .withImage(item.getImage())
-                    .withCommand(item.getCommand().toArray(new String[item.getCommand().size()]))
-                    .withArguments(item.getArguments().toArray(new String[item.getArguments().size()]));
+                    .withCommand(item.getCommand().toArray(new String[0]))
+                    .withArguments(item.getArguments().toArray(new String[0]));
 
             if (item.isSharedEnvironment()) {
                 for (final AddEnvVarDecorator delegate : envVarDecorators) {
                     result.add(new DecoratorBuildItem(target,
-                            new ApplicationContainerDecorator<ContainerBuilder>(name, item.getName()) {
+                            new ApplicationContainerDecorator<ContainerBuilder>(applicationName, item.getName()) {
                                 @Override
                                 public void andThenVisit(ContainerBuilder builder) {
                                     delegate.andThenVisit(builder);
@@ -669,7 +660,7 @@ public class KubernetesCommonHelper {
             }
 
             result.add(new DecoratorBuildItem(target,
-                    new AddInitContainerDecorator(name, containerBuilder
+                    new AddInitContainerDecorator(applicationName, containerBuilder
                             .addAllToEnvVars(item.getEnvVars().entrySet().stream().map(e -> new EnvBuilder()
                                     .withName(e.getKey())
                                     .withValue(e.getValue())
@@ -679,8 +670,8 @@ public class KubernetesCommonHelper {
         return result;
     }
 
-    public static List<DecoratorBuildItem> createInitJobDecorators(String target, String name,
-            List<KubernetesJobBuildItem> items, List<DecoratorBuildItem> decorators) {
+    public static List<DecoratorBuildItem> createInitJobDecorators(String target,
+            String applicationName, List<KubernetesJobBuildItem> items, List<DecoratorBuildItem> decorators) {
         List<DecoratorBuildItem> result = new ArrayList<>();
 
         List<AddEnvVarDecorator> envVarDecorators = decorators.stream()
@@ -688,13 +679,12 @@ public class KubernetesCommonHelper {
                 .map(d -> d.getDecorator(AddEnvVarDecorator.class))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
 
         List<NamedResourceDecorator<?>> volumeDecorators = decorators.stream()
                 .filter(d -> d.getGroup() == null || d.getGroup().equals(target))
                 .filter(d -> d.getDecorator() instanceof AddEmptyDirVolumeDecorator
                         || d.getDecorator() instanceof AddSecretVolumeDecorator
-                        || d.getDecorator() instanceof AddEmptyDirVolumeDecorator
                         || d.getDecorator() instanceof AddAzureDiskVolumeDecorator
                         || d.getDecorator() instanceof AddAzureFileVolumeDecorator
                         || d.getDecorator() instanceof AddAwsElasticBlockStoreVolumeDecorator)
@@ -706,21 +696,21 @@ public class KubernetesCommonHelper {
                 .map(d -> d.getDecorator(AddMountDecorator.class))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
 
         List<AddImagePullSecretDecorator> imagePullSecretDecorators = decorators.stream()
                 .filter(d -> d.getGroup() == null || d.getGroup().equals(target))
                 .map(d -> d.getDecorator(AddImagePullSecretDecorator.class))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
 
         List<ApplyServiceAccountNameDecorator> serviceAccountDecorators = decorators.stream()
                 .filter(d -> d.getGroup() == null || d.getGroup().equals(target))
                 .map(d -> d.getDecorator(ApplyServiceAccountNameDecorator.class))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
 
         items.stream().filter(item -> item.getTarget() == null || item.getTarget().equals(target)).forEach(item -> {
 
@@ -816,7 +806,7 @@ public class KubernetesCommonHelper {
      *        param namespace The optional namespace to apply to the resource
      * @param config The {@link PlatformConfiguration} instance
      */
-    private static List<DecoratorBuildItem> createContainerDecorators(Optional<Project> project, String target, String name,
+    private static List<DecoratorBuildItem> createContainerDecorators(String target, String name,
             Optional<KubernetesNamespaceBuildItem> namespace,
             PlatformConfiguration config) {
         List<DecoratorBuildItem> result = new ArrayList<>();
@@ -825,9 +815,8 @@ public class KubernetesCommonHelper {
             result.add(new DecoratorBuildItem(target, new AddNamespaceToSubjectDecorator(n.getNamespace())));
         });
 
-        config.getWorkingDir().ifPresent(w -> {
-            result.add(new DecoratorBuildItem(target, new ApplyWorkingDirDecorator(name, w)));
-        });
+        config.getWorkingDir()
+                .ifPresent(w -> result.add(new DecoratorBuildItem(target, new ApplyWorkingDirDecorator(name, w))));
 
         return result;
     }
@@ -839,40 +828,32 @@ public class KubernetesCommonHelper {
      * @param name The name of the resource to accept the configuration
      * @param config The {@link PlatformConfiguration} instance
      */
-    private static List<DecoratorBuildItem> createPodDecorators(Optional<Project> project, String target, String name,
+    private static List<DecoratorBuildItem> createPodDecorators(String target, String name,
             PlatformConfiguration config) {
         List<DecoratorBuildItem> result = new ArrayList<>();
-        config.getImagePullSecrets().ifPresent(l -> {
-            l.forEach(s -> result.add(new DecoratorBuildItem(target, new AddImagePullSecretDecorator(name, s))));
-        });
+        config.getImagePullSecrets().ifPresent(
+                l -> l.forEach(s -> result.add(new DecoratorBuildItem(target, new AddImagePullSecretDecorator(name, s)))));
 
-        config.getHostAliases().entrySet().forEach(e -> {
-            result.add(new DecoratorBuildItem(target, new AddHostAliasesDecorator(name, HostAliasConverter.convert(e))));
-        });
+        config.getHostAliases().entrySet().forEach(e -> result
+                .add(new DecoratorBuildItem(target, new AddHostAliasesDecorator(name, HostAliasConverter.convert(e)))));
 
-        config.getInitContainers().entrySet().forEach(e -> {
-            result.add(new DecoratorBuildItem(target, new AddInitContainerDecorator(name, ContainerConverter.convert(e))));
-        });
+        config.getInitContainers().entrySet().forEach(e -> result
+                .add(new DecoratorBuildItem(target, new AddInitContainerDecorator(name, ContainerConverter.convert(e)))));
 
-        config.getSidecars().entrySet().forEach(e -> {
-            result.add(new DecoratorBuildItem(target, new AddSidecarDecorator(name, ContainerConverter.convert(e))));
-        });
+        config.getSidecars().entrySet().forEach(
+                e -> result.add(new DecoratorBuildItem(target, new AddSidecarDecorator(name, ContainerConverter.convert(e)))));
 
-        config.getResources().limits.cpu.ifPresent(c -> {
-            result.add(new DecoratorBuildItem(target, new ApplyLimitsCpuDecorator(name, c)));
-        });
+        config.getResources().limits.cpu
+                .ifPresent(c -> result.add(new DecoratorBuildItem(target, new ApplyLimitsCpuDecorator(name, c))));
 
-        config.getResources().limits.memory.ifPresent(m -> {
-            result.add(new DecoratorBuildItem(target, new ApplyLimitsMemoryDecorator(name, m)));
-        });
+        config.getResources().limits.memory
+                .ifPresent(m -> result.add(new DecoratorBuildItem(target, new ApplyLimitsMemoryDecorator(name, m))));
 
-        config.getResources().requests.cpu.ifPresent(c -> {
-            result.add(new DecoratorBuildItem(target, new ApplyRequestsCpuDecorator(name, c)));
-        });
+        config.getResources().requests.cpu
+                .ifPresent(c -> result.add(new DecoratorBuildItem(target, new ApplyRequestsCpuDecorator(name, c))));
 
-        config.getResources().requests.memory.ifPresent(m -> {
-            result.add(new DecoratorBuildItem(target, new ApplyRequestsMemoryDecorator(name, m)));
-        });
+        config.getResources().requests.memory
+                .ifPresent(m -> result.add(new DecoratorBuildItem(target, new ApplyRequestsMemoryDecorator(name, m))));
 
         if (config.getSecurityContext().isAnyPropertySet()) {
             result.add(new DecoratorBuildItem(target, new ApplySecuritySettingsDecorator(name, config.getSecurityContext())));
@@ -881,7 +862,7 @@ public class KubernetesCommonHelper {
         return result;
     }
 
-    private static List<DecoratorBuildItem> createAppConfigVolumeAndEnvDecorators(Optional<Project> project, String target,
+    private static List<DecoratorBuildItem> createAppConfigVolumeAndEnvDecorators(String target,
             String name,
             PlatformConfiguration config) {
 
@@ -916,49 +897,40 @@ public class KubernetesCommonHelper {
             result.add(new DecoratorBuildItem(target,
                     new AddEnvVarDecorator(ApplicationContainerDecorator.ANY, name, new EnvBuilder()
                             .withName("SMALLRYE_CONFIG_LOCATIONS")
-                            .withValue(paths.stream().collect(Collectors.joining(",")))
+                            .withValue(String.join(",", paths))
                             .build())));
         }
         return result;
     }
 
-    private static List<DecoratorBuildItem> createMountAndVolumeDecorators(Optional<Project> project, String target,
+    private static List<DecoratorBuildItem> createMountAndVolumeDecorators(String target,
             String name,
             PlatformConfiguration config) {
         List<DecoratorBuildItem> result = new ArrayList<>();
 
-        config.getMounts().entrySet().forEach(e -> {
-            result.add(new DecoratorBuildItem(target, new AddMountDecorator(ANY, name, MountConverter.convert(e))));
-        });
+        config.getMounts().entrySet().forEach(
+                e -> result.add(new DecoratorBuildItem(target, new AddMountDecorator(ANY, name, MountConverter.convert(e)))));
 
-        config.getSecretVolumes().entrySet().forEach(e -> {
-            result.add(new DecoratorBuildItem(target, new AddSecretVolumeDecorator(SecretVolumeConverter.convert(e))));
-        });
+        config.getSecretVolumes().entrySet().forEach(e -> result
+                .add(new DecoratorBuildItem(target, new AddSecretVolumeDecorator(SecretVolumeConverter.convert(e)))));
 
-        config.getConfigMapVolumes().entrySet().forEach(e -> {
-            result.add(new DecoratorBuildItem(target, new AddConfigMapVolumeDecorator(ConfigMapVolumeConverter.convert(e))));
-        });
+        config.getConfigMapVolumes().entrySet().forEach(e -> result
+                .add(new DecoratorBuildItem(target, new AddConfigMapVolumeDecorator(ConfigMapVolumeConverter.convert(e)))));
 
-        config.getEmptyDirVolumes().forEach(e -> {
-            result.add(new DecoratorBuildItem(target, new AddEmptyDirVolumeDecorator(EmptyDirVolumeConverter.convert(e))));
-        });
+        config.getEmptyDirVolumes().forEach(e -> result
+                .add(new DecoratorBuildItem(target, new AddEmptyDirVolumeDecorator(EmptyDirVolumeConverter.convert(e)))));
 
-        config.getPvcVolumes().entrySet().forEach(e -> {
-            result.add(new DecoratorBuildItem(target, new AddPvcVolumeDecorator(PvcVolumeConverter.convert(e))));
-        });
+        config.getPvcVolumes().entrySet().forEach(
+                e -> result.add(new DecoratorBuildItem(target, new AddPvcVolumeDecorator(PvcVolumeConverter.convert(e)))));
 
-        config.getAwsElasticBlockStoreVolumes().entrySet().forEach(e -> {
-            result.add(new DecoratorBuildItem(target,
-                    new AddAwsElasticBlockStoreVolumeDecorator(AwsElasticBlockStoreVolumeConverter.convert(e))));
-        });
+        config.getAwsElasticBlockStoreVolumes().entrySet().forEach(e -> result.add(new DecoratorBuildItem(target,
+                new AddAwsElasticBlockStoreVolumeDecorator(AwsElasticBlockStoreVolumeConverter.convert(e)))));
 
-        config.getAzureFileVolumes().entrySet().forEach(e -> {
-            result.add(new DecoratorBuildItem(target, new AddAzureFileVolumeDecorator(AzureFileVolumeConverter.convert(e))));
-        });
+        config.getAzureFileVolumes().entrySet().forEach(e -> result
+                .add(new DecoratorBuildItem(target, new AddAzureFileVolumeDecorator(AzureFileVolumeConverter.convert(e)))));
 
-        config.getAzureDiskVolumes().entrySet().forEach(e -> {
-            result.add(new DecoratorBuildItem(target, new AddAzureDiskVolumeDecorator(AzureDiskVolumeConverter.convert(e))));
-        });
+        config.getAzureDiskVolumes().entrySet().forEach(e -> result
+                .add(new DecoratorBuildItem(target, new AddAzureDiskVolumeDecorator(AzureDiskVolumeConverter.convert(e)))));
         return result;
     }
 
@@ -969,10 +941,8 @@ public class KubernetesCommonHelper {
             Optional<Port> port) {
         List<DecoratorBuildItem> result = new ArrayList<>();
 
-        annotations.forEach(a -> {
-            result.add(new DecoratorBuildItem(a.getTarget(),
-                    new AddAnnotationDecorator(name, a.getKey(), a.getValue())));
-        });
+        annotations.forEach(a -> result.add(new DecoratorBuildItem(a.getTarget(),
+                new AddAnnotationDecorator(name, a.getKey(), a.getValue()))));
 
         ZonedDateTime now = ZonedDateTime.now(ZoneOffset.UTC);
 
@@ -1052,7 +1022,7 @@ public class KubernetesCommonHelper {
      * @param target The deployment target
      * @param probeKind The probe kind (e.g. readinessProbe, livenessProbe etc)
      * @param portName the probe port name build item
-     * @paramt ports a list of kubernetes port build items
+     * @param ports a list of kubernetes port build items
      * @return a decorator for configures the port of the http action of the probe.
      */
     public static DecoratorBuildItem createProbeHttpPortDecorator(String name, String target, String probeKind,
@@ -1116,10 +1086,10 @@ public class KubernetesCommonHelper {
             Optional<KubernetesHealthReadinessPathBuildItem> readinessPath,
             Optional<KubernetesHealthStartupPathBuildItem> startupPath) {
         List<DecoratorBuildItem> result = new ArrayList<>();
-        createLivenessProbe(name, target, livenessProbe, livenessPath).ifPresent(d -> result.add(d));
-        createReadinessProbe(name, target, readinessProbe, readinessPath).ifPresent(d -> result.add(d));
+        createLivenessProbe(name, target, livenessProbe, livenessPath).ifPresent(result::add);
+        createReadinessProbe(name, target, readinessProbe, readinessPath).ifPresent(result::add);
         if (!KNATIVE.equals(target)) { // see https://github.com/quarkusio/quarkus/issues/33944
-            createStartupProbe(name, target, startupProbe, startupPath).ifPresent(d -> result.add(d));
+            createStartupProbe(name, target, startupProbe, startupPath).ifPresent(result::add);
         }
         return result;
     }
@@ -1185,16 +1155,7 @@ public class KubernetesCommonHelper {
     }
 
     private static List<PolicyRule> toPolicyRulesList(Map<String, PolicyRuleConfig> policyRules) {
-        return policyRules.values()
-                .stream()
-                .map(it -> new PolicyRuleBuilder()
-                        .withApiGroups(it.apiGroups.orElse(LIST_WITH_EMPTY))
-                        .withNonResourceURLs(it.nonResourceUrls.orElse(null))
-                        .withResourceNames(it.resourceNames.orElse(null))
-                        .withResources(it.resources.orElse(null))
-                        .withVerbs(it.verbs.orElse(null))
-                        .build())
-                .collect(Collectors.toList());
+        return policyRules.values().stream().map(RBACUtil::from).toList();
     }
 
     private static String parseVCSUri(VCSUriConfig config, ScmInfo scm) {
